@@ -18,14 +18,11 @@ include $(stepdir)/executable-targets.make
 POSTINSTALLS=$(wildcard postinstall*.sh)
 OUT_POSTINSTALLS=$(POSTINSTALLS:%=$(outdir)/%)
 
-POSTREMOVES=$(wildcard postremove*.sh)
-OUT_POSTREMOVES=$(POSTREMOVES:%=$(outdir)/%)
-
 $(outdir)/%.sh: %.sh $(config_make)
 	cat $< | sed $(sed-atvariables) > $@
 	chmod 755 $@
 
-default: $(OUT_POSTINSTALLS) $(OUT_POSTREMOVES) $(OUTIN_FILES) 
+default: $(OUT_POSTINSTALLS) $(OUTIN_FILES) 
 
 INSTALLATION_OUT_SUFFIXES=1
 
@@ -33,9 +30,6 @@ INSTALLATION_OUT_SUFFIXES=1
 etc=$(patsubst %/, %, $(dir $(prefix)))/etc
 INSTALLATION_DIR=$(etc)/postinstall
 INSTALLATION_FILES=$(OUT_POSTINSTALLS)
-
-INSTALLATION_OUT_DIR1=$(etc)/postremove
-INSTALLATION_OUT_FILES1=$(OUT_POSTREMOVES)
 
 endif
 
