@@ -1,3 +1,11 @@
+2005-10-11  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* cygwin/postinstall-lilypond.sh: Remove cruft.
+
+	* cygwin/postremove-lilypond.sh: Remove.
+
+	* cygwin/GNUmakefile (default): Remove postremove rules.
+
 2005-10-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/hara-kiri-group-spanner.cc (consider_suicide): backport:
